--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+
 
 }
 
@@ -8,7 +10,6 @@
 :root {
   font-family: "Roboto";
   color: #242424;
-  overflow: hidden;
   --color-light-primary-100: #e6e6fa;
   --color-light-primary-200: #d8bfd8;
   --color-light-primary-300: #dda0dd;
