--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -1,12 +1,12 @@
 .form {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   width: 30rem;
   gap: 1.5rem;
-  justify-content: space-between;
-  padding: 5rem 0;
   border-radius: 0.8rem;
-  margin: 1rem;
+  margin-top: 5rem;
+
+
 }
 
 
