--- a/src/components/SocialMedia.module.css
+++ b/src/components/SocialMedia.module.css
@@ -3,9 +3,8 @@
     display: flex;
     gap: 2rem;
     flex-direction: column;
-    padding: 17.5rem 1rem;
-    
-
-     
+    padding: 21rem 1rem;
+    font-size: 2rem
+ 
 };
 
