--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-  height: 100vh;
-}
 
 .app {
   height: 100%;
@@ -11,15 +7,19 @@ body {
 }
 
 
-#light {
+.light {
+  background: #fff;
+}
+body {
   background: #fff;
 }
 
-#dark {
-  background: #000;
+.dark {
+  background-color: black;
 }
 
-#dark main {
-  color: white;
+.dark main {
+ 
 }
+
 
