--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -11,25 +11,18 @@
   
   .modal {
     position: fixed;
-    
-    left: 5%;
-    width:90%;
+    right: 0;
+    width:65%;
     height: 100%;
     background-color:black;
     padding: 1rem;
     border-radius: 14px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 30;
-    animation: slide-down 300ms ease-out forwards;
+    animation: slide-down 0.3s ease-out forwards;
+    color: #e6e5e5;
   }
 
-    
-  @media (min-width: 768px) {
-    .modal {
-      width: 40rem;
-      left: calc(50% - 20rem);
-    }
-  }
 
   @keyframes slide-down {
     from {
@@ -39,6 +32,7 @@
     to {
         opacity: 1;
         transform: translateX(0rem);
+      
 
     }
     
