--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -1,5 +1,5 @@
 .about {
-  width: 30rem;
+  width: 40%;
   text-align: justify;
   flex-direction: column;
   display: flex;
@@ -7,22 +7,37 @@
   padding: 5rem 1rem;
   color: var(--color-light-primary-700);
   opacity: 0.8;
+  font-size: 1.2rem;
 }
 
 .about h1 {
   width: 50%;
   color: var(--color-light-primary-500);
   margin-bottom: 2.5rem;
-  border-bottom: 3px solid var(--color-light-primary-500);
-
+  text-decoration: underline;
+  text-decoration-color: var(--color-light-primary-500);
+  text-decoration-thickness: 3px;
+  text-underline-offset: 0.7rem;
 }
 .bold {
-    color:var(--color-light-primary-500);
-    opacity: 1;
-    font-size: 1.2rem;
-    font-weight: 800;
+  color: var(--color-light-primary-500);
+  opacity: 1;
+  font-size: 1.4rem;
+  font-weight: 800;
 }
 
-.exclamation {
-    font-size: 1.5rem;
+@media (max-width: 768px) {
+  .about {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 5rem;
+
+
+
+  }
+  .about h1 {
+    text-align: center;
+  
+  }
 }
