--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,66 @@
+@font-face {
+  font-family: 'Quicksand' ;
+  src: url('./assets/font/Quicksand/Quicksand-VariableFont_wght.ttf')
+} 
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-
 }
 
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+@media (min-width: 480px) {
+  html {
+    zoom: 1.2;
+  }
+}
+@media (min-width: 768px) {
+  html {
+    zoom: 1.3;
+  }
+}
+@media (min-width: 1440px) {
+  html {
+    zoom: 1.5;
+  }
+}
+@media (min-width: 2560px) {
+  html {
+    zoom: 1.7;
+  }
+}
+
+@media (min-width: 3860px) {
+  html {
+    zoom: 2.5;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 1.1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background: #888787;
+  transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-light-primary-700)
+}
+
+::-webkit-scrollbar-track {
+  background: #f9f9f9;
+}
 
 :root {
-  font-family: "Roboto";
+  font-family: "Quicksand";
   color: #242424;
   --color-light-primary-100: #e6e6fa;
   --color-light-primary-200: #d8bfd8;
@@ -17,4 +69,9 @@
   --color-light-primary-500: #8b008b;
   --color-light-primary-600: #800080;
   --color-light-primary-700: #39153f;
+}
+
+body {
+  font-size: 1.3rem;
+
 }
