--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,7 +1,18 @@
 .about-page {
-    display: flex;
-    /* background-color: #8EC5FC;
+  display: flex;
+  /* background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
-    margin-top: 2rem;
-    
+  margin-top: 2rem;
+  justify-content: space-evenly;
+  width: 100%;
+  gap: 5rem;
+
+}
+
+@media (max-width: 768px) {
+  .about-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
