--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -1,15 +1,17 @@
 .logo {
-    font-size: xx-large;
-    padding: 0.5rem 1rem;
-  }
-  .logo a {
-    text-decoration: none;
-  }
-  .logo-letter {
-    color: var(--color-light-primary-500);
-    font-size: 4rem;
-    margin-right: 0.3rem;
-    box-shadow: 1px 1px 1px 1px var(--color-light-primary-500);
-  
-  }
-  
+  font-size: 2.5rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: flex-end;
+  letter-spacing: 0.4rem;
+}
+.logo a {
+  text-decoration: none;
+}
+
+.m {
+  margin-right: 0.4rem;
+  stroke:var(--color-light-primary-600);
+  stroke-width: 0.3;
+ 
+}
