--- a/src/index.css
+++ b/src/index.css
@@ -16,17 +16,17 @@ html {
 }
 @media (min-width: 480px) {
   html {
-    zoom: 1.2;
+    zoom: 1.15;
   }
 }
 @media (min-width: 768px) {
   html {
-    zoom: 1.3;
+    zoom: 1.2;
   }
 }
 @media (min-width: 1440px) {
   html {
-    zoom: 1.5;
+    zoom: 1.3;
   }
 }
 @media (min-width: 2560px) {
@@ -61,7 +61,7 @@ html {
 
 :root {
   font-family: "Quicksand";
-  color: #242424;
+  color: #1d1d1d;
   --color-light-primary-100: #e6e6fa;
   --color-light-primary-200: #d8bfd8;
   --color-light-primary-300: #dda0dd;
@@ -69,9 +69,11 @@ html {
   --color-light-primary-500: #8b008b;
   --color-light-primary-600: #800080;
   --color-light-primary-700: #39153f;
+
 }
 
 body {
   font-size: 1.3rem;
-
+  overflow: hidden;
+ 
 }
