--- a/src/UI/Button.module.css
+++ b/src/UI/Button.module.css
@@ -20,4 +20,11 @@
     text-decoration: none;
     box-shadow: 8px 16px 16px hsl(0deg 0% 0% / 0.25);
   }
+
+button:disabled,
+button:disabled:active {
+  color: #fff;
+  border-color: #ccc;
+  cursor:not-allowed;
+}
  
