--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -1,39 +1,34 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 20;
-    background-color: rgba(0, 0, 0, 0.75);
-  
-  }
-  
-  .modal {
-    position: fixed;
-    right: 0;
-    width:70%;
-    height: 100%;
-    background-color:black;
-    padding: 1rem;
-    border-radius: 14px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 30;
-    animation: slide-down 0.3s ease-out forwards;
-    color: #e6e5e5;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.75);
+}
 
+.modal {
+  position: fixed;
+  right: 0;
+  width: 70%;
+  height: 100%;
+  background-color: rgb(23, 23, 23);
+  padding: 1rem;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 0.3s ease-out forwards;
+  color: #e6e5e5;
+}
 
-  @keyframes slide-down {
-    from {
-        opacity: 0;
-        transform: translateX(20rem);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0rem);
-      
-
-    }
-    
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateX(20rem);
   }
+  to {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
