--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -5,8 +5,6 @@
   gap: 1.5rem;
   border-radius: 0.8rem;
   margin-top: 5rem;
-
-
 }
 
 .form input {
@@ -16,28 +14,69 @@
   background: transparent;
   border: 1px solid var(--color-light-primary-300);
   border-radius: 0.8rem;
-  opacity: 0.8;
   box-shadow: 0 0 10px var(--color-light-primary-200);
+  outline: transparent;
+}
+.name-input,
+.email-input,
+.form .textarea,
+.form .subject-input {
+  width: 100%;
+}
+
+.error-message {
+  position: relative;
+  top: 0.75rem;
+  font-size: 1.15rem;
+  color: #d8000c;
+
+  font-weight: 500;
+}
+.invalid textarea {
+  color: purple;
+}
+
+.invalid input,
+.invalid .textarea {
+  border: 1px solid #b40e0e;
+  background-color: #fddddd;
+}
+.invalid input:focus,
+.invalid .textarea:focus {
+  border-color: #ff8800;
+  background-color: #fbe8d2;
+}
+.form input:focus,
+.form .textarea:focus {
+  background-color: var(--color-light-primary-100);
+  border: 1.5px solid var(--color-light-primary-500);
+}
+
+  input:-webkit-autofill,
+  .textarea:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px #faf8f8 inset !important;
+
+}
+
+input::placeholder,
+textarea::placeholder {
+  font-weight: 400;
+  color: var(--color-light-primary-500);
 }
 
 .form textarea {
-  height: 10rem;
+  height: 11.5rem;
   padding: 0.8rem;
   border: 1px solid var(--color-light-primary-300);
   border-radius: 0.8rem;
   background: transparent;
   box-shadow: 0 0 10px var(--color-light-primary-200);
+  outline: transparent;
   font-family: "Roboto";
-  font-weight: 300;
 }
 .form-top__section {
   display: flex;
   gap: 1rem;
-}
-
-.name-input,
-.email-input {
-  width: 100%;
 }
 
 .user-icon {
@@ -46,6 +85,5 @@
 }
 
 .plane-icon {
-    font-size: 1rem;
+  font-size: 1rem;
 }
-
