--- a/src/components/CubeAnimation.module.css
+++ b/src/components/CubeAnimation.module.css
@@ -67,11 +67,12 @@
 
 @media (max-width: 768px) {
   .cube {
-
     display: flex;
     width: 100%;
     justify-content: flex-start;
-    padding: 0 5rem;
+    padding:0 5rem;
+    position: relative;
+    bottom: 4rem;
   
   }
 
