--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -6,10 +6,11 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 1rem;
-  
+  align-items: flex-end;
+  position: relative;
+
 }
+
 
 nav {
   display: flex;
@@ -37,7 +38,7 @@ nav {
   right: 2rem;
   top: 1.5rem;
   color: var(--color-light-primary-600);
-  z-index: 100000;
+  z-index: 10;
   font-size: 2rem;
   cursor: pointer;
   display: none;
@@ -63,7 +64,7 @@ nav {
   }
   .switch {
     position: fixed;
-    top: 0;
+    top: 0.35rem;
     right: 3rem;
   }
 }
