--- a/src/components/SkillGraph.module.css
+++ b/src/components/SkillGraph.module.css
@@ -4,7 +4,8 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  transition: 1.2s;
+
 }
 
 .skillCircles {
@@ -43,6 +44,8 @@
   position: relative;
 }
 
+
+
 .card1 {
   display: flex;
   flex-wrap: wrap;
@@ -51,8 +54,18 @@
   width: 20rem;
   position: absolute;
   right: 55%;
- 
+  transition: 0.2s;
 }
+.card1:hover,
+.card2:hover,
+.card3:hover,
+.card4:hover {
+  background-color: var(--color-light-primary-100);
+  box-shadow: 8px 16px 16px hsl(0deg 0% 0% / 0.25);
+  color: var(--color-light-primary-700);
+  cursor: pointer;
+}
+
 
 .card1 ul,
 .card2 ul,
@@ -60,6 +73,9 @@
 .card4 ul {
   margin-left: 1rem;
   font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
 }
 
 .card2 {
@@ -70,6 +86,7 @@
   position: absolute;
   left: 55%;
   top: 1rem;
+  transition: 0.2s;
 
 
 }
@@ -82,6 +99,7 @@
   gap: 0.3rem;
   right: 55%;
   top: 3rem;
+  transition: 0.2s;
   
 
 }
@@ -93,4 +111,35 @@
   position: absolute;
   left: 55%;
   bottom: -13rem;
+  transition: 0.2s;
+}
+
+@media(max-width:576px ) {
+  .card1,
+  .card2,
+  .card3,
+  .card4 {
+  width: 15rem;
+  font-size: 1.3rem;
+  
+}
+.card1,
+.card3 {
+  position: absolute;
+  left: -13rem
+}
+.card2,
+.card4 { position: absolute;
+  left: -2rem
+
+}
+.skills {
+  zoom: 0.87;
+  
+ }
+ .line,.skillCircles {
+   zoom: 0.9
+ }
+ 
+
 }
