--- a/src/components/SocialMedia.module.css
+++ b/src/components/SocialMedia.module.css
@@ -1,10 +1,17 @@
 .social-media {
-    float: left;
-    display: flex;
-    gap: 3rem;
-    flex-direction: column;
-    padding: 23rem 1rem;
+  float: left;
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  padding: 23rem 1rem;
+  font-size: 1.8rem;
 
- 
-};
+}
+
+.linkedin,
+.github,
+.instagram
+ {
+    color: var(--color-light-primary-500);
+}
 
