--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -1,10 +1,9 @@
 .contact-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   gap: 5rem;
   padding-bottom: 2rem;
-  margin-top: 1rem;
-  background-color: rgb(241 245 249);
+  /* background-color: rgb(241 245 249); */
 }
 
 .contact {
@@ -18,23 +17,18 @@
 }
 
 .contact h1,
-.contact h3,
-.number {
+.contact h3 {
   color: var(--color-light-primary-500);
 }
 
+.contact p {
+  letter-spacing: 0.1rem;
+}
+
 @media (max-width: 1200px) {
-  .contact-wrapper{
+  .contact-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
   }
-
-
-
-
-  }
-
-  
-
+}
