--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -11,7 +11,7 @@
 .modal {
   position: fixed;
   right: 0;
-  width: 70%;
+  width: 60%;
   height: 100%;
   background-color: rgb(23, 23, 23);
   padding: 1rem;
@@ -20,5 +20,12 @@
   z-index: 30;
   animation: slide-down 0.3s ease-out forwards;
   color: #e6e5e5;
+}
+
+
+@media (max-width: 576px) {
+  .modal {
+    width: 80%;
+  }
 }
 
