--- a/src/components/CubeAnimation.module.css
+++ b/src/components/CubeAnimation.module.css
@@ -65,37 +65,44 @@
   }
 }
 
+
+@media (max-width: 480px) {
+  .cube {
+    padding-bottom: 4.5rem;
+
+  }
+}
+
 @media (max-width: 768px) {
   .cube {
     display: flex;
     width: 100%;
     justify-content: flex-start;
-    padding:0 5rem;
-    position: relative;
-    bottom: 4rem;
-  
+    position: absolute;
+    bottom: 1rem;
+    left: 5rem;
   }
 
   .cubespinner div {
-    width: 160px;
-    height: 160px;
+    width: 140px;
+    height: 140px;
   }
   .icon1 {
-    transform: translateZ(80px);
+    transform: translateZ(70px);
   }
   .icon2 {
-    transform: rotateY(90deg) translateZ(80px);
+    transform: rotateY(90deg) translateZ(70px);
   }
   .icon3 {
-    transform: rotateY(90deg) rotateX(90deg) translateZ(80px);
+    transform: rotateY(90deg) rotateX(90deg) translateZ(70px);
   }
   .icon4 {
-    transform: rotateY(180deg) rotateZ(90deg) translateZ(80px);
+    transform: rotateY(180deg) rotateZ(90deg) translateZ(70px);
   }
   .icon5 {
-    transform: rotateY(-90deg) rotateZ(90deg) translateZ(80px);
+    transform: rotateY(-90deg) rotateZ(90deg) translateZ(70px);
   }
   .icon6 {
-    transform: rotateX(-90deg) translateZ(80px);
+    transform: rotateX(-90deg) translateZ(70px);
   }
 }
