--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,4 +1,3 @@
-
 .projects-wrapper {
   margin-top: 3rem;
 }
@@ -7,7 +6,6 @@
   color: var(--color-light-primary-600);
   position: relative;
   top: 3rem;
-
 }
 
 .projects {
@@ -16,7 +14,6 @@
   justify-content: center;
   gap: 3rem;
   margin-top: 10rem;
- 
 }
 .project-container {
   width: 20rem;
@@ -34,7 +31,6 @@
   height: 100%;
   gap: 2rem;
   font-size: 1.2rem;
-
 }
 
 .project-content p {
@@ -42,10 +38,9 @@
   font-weight: 500;
   font-size: 1.4rem;
   cursor: pointer;
-
 }
 
-.box-content{
+.box-content {
   display: flex;
   gap: 2rem;
 }
@@ -63,5 +58,7 @@
   color: #efd81d;
   font-size: 3.5rem;
 }
-
-
+.database {
+  color: #006842;
+  font-size: 3.3rem;
+}
